[tool.poetry]
name = "hidden"
version = "0.1.0"
description = ""
authors = ["tanimutomo <tanimutomo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
comet-ml = "3.3.4"
moment = "0.12.1"
tqdm = "4.57.0"
kornia = "0.4.1"
distortion = {git = "https://github.com/tanimutomo/watermark-distortions", rev = "main"}
hydra-core = "1.0.6"
python-dotenv = "0.15.0"
torch = "1.6.0"
torchvision = "0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
