[tool.poetry]
name = "hidden"
version = "0.1.0"
description = ""
authors = ["tanimutomo <tanimutomo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
comet-ml = "3.3.4"
moment = "0.12.1"
tqdm = "4.57.0"
kornia = "0.4.1"
hydra-core = "1.0.6"
python-dotenv = "0.15.0"
torch = "1.6.0"
torchvision = "0.7.0"
torchtext = "0.7.0"
ptdt = "^0.1.2"
distortion = "^0.1.26"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.4"
plotly = "4.14.3"
pandas = "^1.2.4"
nbformat = "^5.1.3"
scikit-learn = "^0.24.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
